--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -7,81 +7,84 @@
     tools:context="com.example.lenovo.myfinance.Fragments.Transaction_fragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
+        android:id="@+id/trans_constraint"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/trans_constraint">
+        android:orientation="vertical">
 
-    <!--Top most info layout-->
-    <RelativeLayout
-        android:id="@+id/TopInfo_relative"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        app:layout_constraintTop_toTopOf="@id/trans_recycler"
-
-        >
-        <LinearLayout
-            android:id="@+id/TopInfo_linear"
+        <!--Top most info layout-->
+        <RelativeLayout
+            android:id="@+id/TopInfo_relative"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/colorPrimaryDark"
-            android:orientation="horizontal"
-            android:weightSum="3"
-            android:padding="20dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            app:layout_constraintTop_toTopOf="@id/trans_recycler"
 
-           >
+            >
 
-            <TextView
-                android:id="@+id/income_text"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="INCOME"
-                android:layout_weight="1"
-                android:textColor="@color/white" />
+            <LinearLayout
+                android:id="@+id/TopInfo_linear"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/colorPrimaryDark"
+                android:orientation="horizontal"
+                android:padding="20dp"
+                android:weightSum="3"
 
+                >
 
-            <TextView
-                android:id="@+id/expense_text"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="EXPENSE"
-                android:textColor="@color/white"
-                android:layout_weight="1"
-               />
+                <TextView
+                    android:id="@+id/income_text"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:text="INCOME"
+                    android:textColor="@color/white" />
 
 
-            <TextView
-                android:id="@+id/balance_text"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:text="BALANCE"
-                android:textColor="@color/white" />
+                <TextView
+                    android:id="@+id/expense_text"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:text="EXPENSE"
+                    android:textColor="@color/white" />
 
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/balance_text"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:text="BALANCE"
+                    android:textColor="@color/white" />
 
-        <ImageView
-            android:id="@+id/trans_image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/exchange"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="45dp"/>
-    </RelativeLayout>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/trans_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/TopInfo_relative"
-        android:padding="10dp"
-        ></android.support.v7.widget.RecyclerView></android.support.constraint.ConstraintLayout>
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/trans_image"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="45dp"
+                android:src="@drawable/exchange" />
+        </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/trans_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            app:layout_constraintTop_toBottomOf="@id/TopInfo_relative" />
+
+           </LinearLayout>
 
 
 </FrameLayout>
