--- a/app/src/main/res/layout/individual_transaction_detail.xml
+++ b/app/src/main/res/layout/individual_transaction_detail.xml
@@ -3,9 +3,41 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="8dp">
+    android:paddingTop="8dp"
+    android:paddingBottom="4dp">
     <ImageView
+        android:id="@+id/category_image"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/logoback_shape"
+        android:layout_marginLeft="10dp"/>
+    <TextView
+        android:id="@+id/category_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="Health"
+        android:layout_toRightOf="@+id/category_image"
+        android:layout_marginLeft="10dp"
+        android:textSize="15dp"
+        />
+    <TextView
+        android:id="@+id/account_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="cash"
+        android:textSize="14dp"
+        android:layout_toRightOf="@id/category_image"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
+        android:padding="2dp"/>
+    <TextView
+        android:id="@+id/transfer_amount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/account_type"
+        android:layout_marginLeft="210dp"
+        android:layout_marginTop="2dp"
+        android:text="-50"
+        android:textSize="20dp"/>
 
 </RelativeLayout>
