--- a/app/src/main/res/layout/individual_transactiondate.xml
+++ b/app/src/main/res/layout/individual_transactiondate.xml
@@ -1,49 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingTop="8dp"
-    android:paddingBottom="6dp"
-    android:paddingLeft="5dp">
-    <TextView
-        android:layout_width="wrap_content"
+    android:orientation="vertical">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/day_no"
-        android:text="14"
-        android:textSize="25dp"
-        android:layout_marginLeft="8dp"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/day_text"
-        android:text="Wednesday"
-        android:textSize="10dp"
-        android:padding="2dp"
-        android:layout_marginLeft="40dp"
-        android:layout_toLeftOf="@id/day_no"
-       />
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:paddingTop="8dp"
+        android:paddingBottom="6dp"
+        android:paddingLeft="5dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/day_no"
+            android:text="14"
+            android:textSize="25dp"
+            android:layout_marginLeft="8dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/day_text"
+            android:text="Wednesday"
+            android:textSize="10dp"
+            android:padding="2dp"
+            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@id/day_no"
+            />
 
-    <TextView
-        android:id="@+id/month_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="February"
-        android:textSize="14dp"
-        android:maxWidth="240dp"
-        android:padding="2dp"
-        android:layout_toLeftOf="@id/day_no"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="10dp"/>
-    <TextView
-        android:id="@+id/year_no"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="2018"
-        android:padding="2dp"
-        android:layout_toLeftOf="@id/month_text"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="100dp"/>
+        <TextView
+            android:id="@+id/month_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="February"
+            android:textSize="14dp"
+            android:maxWidth="240dp"
+            android:padding="2dp"
+            android:layout_toRightOf="@id/day_no"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"/>
+        <TextView
+            android:id="@+id/year_no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2018"
+            android:padding="2dp"
+            android:layout_toRightOf="@id/month_text"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="8dp"/>
+        <TextView
+            android:id="@+id/transfer_total"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-300"
+            android:textSize="25dp"
+            android:layout_toRightOf="@id/year_no"
+            android:layout_marginLeft="150dp"/>
 
-</RelativeLayout>
+    </RelativeLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/individual_transfer_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+</LinearLayout>
