--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -20,62 +20,135 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top"
             app:layout_constraintTop_toTopOf="@id/trans_recycler"
-
             >
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/TopInfo_linear"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:background="@color/colorPrimaryDark"
-                android:orientation="horizontal"
-                android:padding="20dp"
-                android:weightSum="3"
-
+                android:background="@drawable/layout_shape"
+                android:padding="10dp"
                 >
-
-                <TextView
-                    android:id="@+id/income_text"
-                    android:layout_width="0dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:text="INCOME"
-                    android:textColor="@color/white" />
+                    android:orientation="horizontal"
+                    android:weightSum="4">
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="5dp"
+                        android:layout_weight="1"
+
+                        >
+                        <TextView
+                            android:id="@+id/income_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="INCOME:"
+
+                            android:textColor="@color/white" />
+                        <TextView
+                            android:id="@+id/income_amount"
+                            android:layout_width="50dp"
+                            android:layout_height="wrap_content"
+                            android:text="500"
+                            android:padding="5dp"
+                            android:gravity="center"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="5dp"
+                            android:background="@drawable/amount_back"
+                            android:textColor="@color/white"
+                            />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="5dp"
+                        android:layout_weight="2">
+                        <TextView
+                        android:id="@+id/expense_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:text="EXPENSE:"
+                        android:textColor="@color/white" />
+                        <TextView
+                        android:id="@+id/expense_amount"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:text="500"
+                        android:padding="5dp"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:layout_gravity="center_horizontal"
+                        android:background="@drawable/amount_back"
+                        android:textColor="@color/white"
+                        />
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="5dp"
+                        android:layout_weight="1">
+                        <TextView
+                        android:id="@+id/balance_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                        android:text="BALANCE:"
+
+                        android:textColor="@color/white" />
+                        <TextView
+                        android:id="@+id/balance_amount"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:text="500"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:layout_weight="1"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/amount_back"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="@color/white"
+                        />
+                    </LinearLayout>
+
+                </LinearLayout>
 
 
-                <TextView
-                    android:id="@+id/expense_text"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:text="EXPENSE"
-                    android:textColor="@color/white" />
 
-
-                <TextView
-                    android:id="@+id/balance_text"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:text="BALANCE"
-                    android:textColor="@color/white" />
-
-
-            </LinearLayout>
+           </RelativeLayout>
 
             <ImageView
                 android:id="@+id/trans_image"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="45dp"
+                android:layout_marginTop="75dp"
                 android:src="@drawable/exchange" />
         </RelativeLayout>
+        <Button
+            android:id="@+id/addtransaction_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_marginTop="5dp"
+            android:text="ADD TRANSACTION"
+            android:textSize="10dp"
+            android:textColor="@color/white"
+            android:background="@drawable/button_shape"
+            android:layout_gravity="center_horizontal"
+
+            />
+
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/trans_recycler"
