--- a/app/src/main/res/layout/individual_transaction_detail.xml
+++ b/app/src/main/res/layout/individual_transaction_detail.xml
@@ -1,43 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="8dp"
-    android:paddingBottom="4dp">
-    <ImageView
-        android:id="@+id/category_image"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@drawable/logoback_shape"
-        android:layout_marginLeft="10dp"/>
-    <TextView
-        android:id="@+id/category_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Health"
-        android:layout_toRightOf="@+id/category_image"
-        android:layout_marginLeft="10dp"
-        android:textSize="15dp"
-        />
-    <TextView
-        android:id="@+id/account_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="cash"
-        android:textSize="14dp"
-        android:layout_toRightOf="@id/category_image"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:padding="2dp"/>
-    <TextView
-        android:id="@+id/transfer_amount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/account_type"
-        android:layout_marginLeft="210dp"
-        android:layout_marginTop="2dp"
-        android:text="-50"
-        android:textSize="20dp"/>
+    android:orientation="horizontal"
+    android:weightSum="3"
 
-</RelativeLayout>
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+       android:padding="10dp">
+        <ImageView
+            android:id="@+id/category_image"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/logoback_shape"
+            android:layout_marginLeft="10dp"/>
+        <TextView
+            android:id="@+id/category_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Health"
+            android:layout_toRightOf="@+id/category_image"
+            android:layout_marginLeft="10dp"
+            android:textSize="15dp"
+            />
+        <TextView
+            android:id="@+id/account_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="cash"
+            android:textSize="14dp"
+            android:layout_toRightOf="@id/category_image"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="25dp"
+            android:padding="2dp"/>
+
+
+    </RelativeLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+
+        android:padding="10dp"
+        android:layout_weight="1">
+        <TextView
+            android:id="@+id/transaction_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+             android:layout_marginTop="2dp"
+            android:text="-50"
+            android:layout_gravity="center_horizontal"
+            android:textSize="25dp"/>
+    </LinearLayout>
+</LinearLayout>
