--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -2,13 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     >
     <item android:id="@+id/nav_account"
-        android:title="my account"
+        android:title="Accounts"
+        android:icon="@drawable/accounts"
         />
-    <item android:id="@+id/nav_settings"
-        android:title="Settings">
-            </item>
     <item android:id="@+id/nav_logout"
-        android:title="log out"/>
-
+        android:title="Backup"
+        android:icon="@drawable/backup"
+       />
+    <item android:id="@+id/nav_security"
+        android:title="Security"
+        android:icon="@drawable/security"/>
+    <item android:id="@+id/nav_settings"
+        android:title="Settings"
+        android:icon="@drawable/settings">
+    </item>
+    <item android:id="@+id/nav_Reminders"
+        android:title="Reminders"
+        android:icon="@drawable/reminders"/>
 
 </menu>
