--- a/app/src/main/res/drawable/calculator_button.xml
+++ b/app/src/main/res/drawable/calculator_button.xml
@@ -2,11 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <!--<solid android:color="@color/darkturq"/>-->
-            <gradient android:angle="270"
-                android:startColor="#1ea6e4"
 
-                android:endColor="#3BC0D5  " />
+            <stroke android:color="@color/darkturq" android:width="2dp" />
             <!--corners allow us to make the rounded corners button-->
             <corners android:radius="15dp" />
         </shape>
