--- a/app/src/main/res/drawable/logoback_shape.xml
+++ b/app/src/main/res/drawable/logoback_shape.xml
@@ -2,11 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid
-        android:color="@color/logocolor"/>
+    <gradient android:angle="270"
+        android:startColor="#1ea6e4"
+
+        android:endColor="#3BC0D5  " />
 
     <corners
-        android:radius="20dp"
+        android:radius="25dp"
         />
 
 </shape>
