--- a/app/src/main/res/drawable/tablayout_shape.xml
+++ b/app/src/main/res/drawable/tablayout_shape.xml
@@ -2,13 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <!--<solid android:color="@color/darkturq"/>-->
+        <solid android:color="@color/darkturq"/>
             <gradient android:angle="270"
                 android:startColor="#1ea6e4"
 
                 android:endColor="#3BC0D5  " />
-            <!--corners allow us to make the rounded corners button-->
-            <corners android:radius="15dp" />
+            <corners android:topLeftRadius="15dp"
+                android:topRightRadius="15dp"/>
         </shape>
     </item>
+
 </selector>
