--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,25 +6,31 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorPrimaryDark"
+    android:id="@+id/drawerlayout"
     tools:context="com.example.lenovo.myfinance.MainActivity">
-    <android.support.design.widget.CoordinatorLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/tool_bar"
+
+            />
         <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/container"
-            android:padding="5dp"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.lenovo.myfinance.Main2Activity">
-            <FrameLayout
-
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/fragment_frame"/>
 
 
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/fragment_frame"/>
 
             <android.support.design.widget.BottomNavigationView
                 android:id="@+id/navigation"
@@ -33,15 +39,15 @@
                 android:layout_marginEnd="0dp"
                 android:layout_marginStart="0dp"
                 android:background="@drawable/backgroundwhite"
-
+                android:elevation="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:menu="@menu/navigation" />
 
         </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 
-    </android.support.design.widget.CoordinatorLayout>
 
 
 
