--- a/app/src/main/res/layout/bottomsheet_transaction.xml
+++ b/app/src/main/res/layout/bottomsheet_transaction.xml
@@ -1,90 +1,325 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/bottomsheet_layout"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    app:layout_behavior="@string/bottom_sheet_behavior"
+    android:id="@+id/income_bottom_sheet"
+    android:fitsSystemWindows="true"
+    android:elevation="3dp"
+    android:layout_gravity="top"
+    android:background="@drawable/backgroundwhite"
    >
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryDark"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="2dp"
-            android:orientation="horizontal"
-            android:weightSum="2">
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="CASH"
-                android:textColor="@color/white"
-                android:padding="10dp"
-                android:layout_weight="1"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:padding="10dp"
-                android:text="BALANCE"
-                android:layout_marginLeft="160dp"
-                android:layout_weight="1"/>
-        </LinearLayout>
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/addtrans"
-            android:layout_centerHorizontal="true"
-
-            />
-    </RelativeLayout>
+    <!--app:layout_behavior="@string/bottom_sheet_behavior">-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="5dp"
-        android:padding="5dp"
-        android:weightSum="3">
-        <EditText
-            android:id="@+id/transaction_amount_editText"
-            android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+       >
+        <RelativeLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:hint="Enter the amount"
-            />
-        <Button
-            android:id="@+id/insertamount_button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="INSERT"
-            android:layout_weight="1"/>
+            android:background="@drawable/layout_shape"
+            android:elevation="24dp"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimaryDark"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="2dp"
+                android:orientation="horizontal"
+                android:weightSum="7">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="from"
+                    android:textColor="@color/white"
+                    android:padding="10dp"
+                    android:textSize="10sp"
+                    android:layout_weight="1"
+                    android:gravity="center"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="INCOME"
+                    android:textColor="@color/white"
+                    android:padding="10dp"
+                    android:layout_weight="2"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="10sp"
+                    android:textColor="@color/white"
+                    android:text="To"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:padding="10dp"
+                    android:text="ACCOUNT"
+                    android:gravity="center"
+                    android:layout_weight="2"/>
+            </LinearLayout>
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/addtrans"
+                android:layout_centerHorizontal="true"
+                android:elevation="5dp"
+                />
+        </RelativeLayout>
+        <FrameLayout
+            android:id="@+id/calculator_holder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </FrameLayout>
+
+        <!--<RelativeLayout-->
+            <!--android:id="@+id/calculator_relative_layout"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+
+            <!--android:layout_marginLeft="10dp"-->
+            <!--android:layout_marginRight="10dp"-->
+            <!--android:layout_marginTop="5dp"-->
+            <!--android:padding="10dp"-->
+            <!--android:layout_marginBottom="20dp"-->
+            <!--&gt;-->
+            <!--&lt;!&ndash;<TextView&ndash;&gt;-->
+                <!--&lt;!&ndash;android:id="@+id/infoTextView"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_marginBottom="30dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:textSize="30sp" />&ndash;&gt;-->
+            <!--<LinearLayout-->
+                <!--android:id="@+id/transaction_view"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:orientation="horizontal"-->
+                <!--android:layout_marginBottom="5dp"-->
+                <!--android:padding="5dp"-->
+                <!--android:weightSum="3">-->
+                <!--<EditText-->
+                    <!--android:id="@+id/income_transaction_edittext"-->
+                    <!--android:layout_width="0dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:enabled="false"-->
+                    <!--android:gravity="bottom"-->
+                    <!--android:hint="Enter transaction amount"-->
+                    <!--android:lines="2"-->
+                    <!--android:maxLines="2"-->
+                    <!--android:textSize="15sp"-->
+                    <!--android:layout_weight="2"/>-->
+                <!--<TextView-->
+                    <!--android:id="@+id/infoTextView"-->
+                    <!--android:layout_width="0dp"-->
+                    <!--android:layout_height="25sp"-->
+
+                    <!--android:gravity="center"-->
+                    <!--android:background="@drawable/amount_back"-->
+                    <!--android:layout_weight="1"/>-->
+            <!--</LinearLayout>-->
+
+
+            <!--<Button-->
+                <!--android:id="@+id/buttonSeven"-->
+                <!--android:background="@drawable/calculator_button"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/transaction_view"-->
+                <!--android:text="7"-->
+                <!--android:textSize="20sp"-->
+                <!--android:layout_marginBottom="5dp"-->
+                <!--android:layout_marginRight="5dp"-->
+                <!--/>-->
+
+            <!--<Button-->
+                <!--android:id="@+id/buttonEight"-->
+                <!--android:background="@drawable/calculator_button"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/transaction_view"-->
+                <!--android:layout_toRightOf="@id/buttonSeven"-->
+                <!--android:text="8"-->
+                <!--android:textSize="20sp"-->
+                <!--android:layout_marginBottom="5dp"-->
+                <!--android:layout_marginRight="5dp"-->
+                <!--/>-->
+
+            <!--<Button-->
+                <!--android:id="@+id/buttonNine"-->
+                <!--android:background="@drawable/calculator_button"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/transaction_view"-->
+                <!--android:layout_toRightOf="@id/buttonEight"-->
+                <!--android:text="9"-->
+                <!--android:textSize="20sp"-->
+                <!--android:layout_marginBottom="5dp"-->
+                <!--android:layout_marginRight="5dp"/>-->
+            <!--<Button-->
+                <!--android:id="@+id/buttonFour"-->
+                <!--android:background="@drawable/calculator_button"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/buttonSeven"-->
+                <!--android:text="4"-->
+                <!--android:textSize="20sp"-->
+                <!--android:layout_marginBottom="5dp"-->
+                <!--android:layout_marginRight="5dp"-->
+                <!--/>-->
+            <!--<Button-->
+                <!--android:id="@+id/buttonFive"-->
+                <!--android:background="@drawable/calculator_button"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/buttonEight"-->
+                <!--android:layout_toRightOf="@id/buttonFour"-->
+                <!--android:text="5"-->
+                <!--android:textSize="20sp"-->
+                <!--android:layout_marginBottom="5dp"-->
+                <!--android:layout_marginRight="5dp"/>-->
+            <!--<Button-->
+                <!--android:id="@+id/buttonSix"-->
+                <!--android:background="@drawable/calculator_button"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/buttonNine"-->
+                <!--android:layout_toRightOf="@id/buttonFive"-->
+                <!--android:text="6"-->
+                <!--android:textSize="20sp"-->
+                <!--android:layout_marginBottom="5dp"-->
+                <!--android:layout_marginRight="5dp"/>-->
+            <!--<Button-->
+                <!--android:id="@+id/buttonOne"-->
+                <!--android:background="@drawable/calculator_button"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/buttonFour"-->
+                <!--android:text="1"-->
+                <!--android:textSize="20sp"-->
+                <!--android:layout_marginBottom="5dp"-->
+                <!--android:layout_marginRight="5dp"/>-->
+            <!--<Button-->
+                <!--android:id="@+id/buttonTwo"-->
+                <!--android:background="@drawable/calculator_button"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/buttonFive"-->
+                <!--android:layout_toRightOf="@id/buttonOne"-->
+                <!--android:text="2"-->
+                <!--android:textSize="20sp"-->
+                <!--android:layout_marginBottom="5dp"-->
+                <!--android:layout_marginRight="5dp"/>-->
+            <!--<Button-->
+                <!--android:id="@+id/buttonThree"-->
+                <!--android:background="@drawable/calculator_button"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/buttonSix"-->
+                <!--android:layout_toRightOf="@id/buttonTwo"-->
+                <!--android:text="3"-->
+                <!--android:textSize="20sp"-->
+                <!--android:layout_marginBottom="5dp"-->
+                <!--android:layout_marginRight="5dp"/>-->
+
+
+
+            <!--<Button-->
+                <!--android:id="@+id/buttonDot"-->
+                <!--android:background="@drawable/calculator_button"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/buttonOne"-->
+                <!--android:text="."-->
+                <!--android:textSize="20sp" />-->
+
+            <!--<Button-->
+                <!--android:id="@+id/buttonZero"-->
+                <!--android:background="@drawable/calculator_button"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/buttonTwo"-->
+               <!--android:layout_alignRight="@+id/buttonEight"-->
+                <!--android:text="0"-->
+                <!--android:textSize="20sp" />-->
+
+            <!--<Button-->
+                <!--android:id="@+id/buttonEqual"-->
+                <!--android:background="@drawable/calculator_button"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_alignRight="@id/buttonNine"-->
+                <!--android:layout_below="@id/buttonThree"-->
+                <!--android:text="="-->
+                <!--android:textSize="20sp" />-->
+
+            <!--<Button-->
+                <!--android:id="@+id/buttonDivide"-->
+                <!--style="@style/Widget.AppCompat.Button.Borderless"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_alignTop="@id/buttonNine"-->
+                <!--android:layout_toRightOf="@id/buttonNine"-->
+                <!--android:text="/"-->
+                <!--android:textSize="20sp" />-->
+
+            <!--<Button-->
+                <!--android:id="@+id/buttonMultiply"-->
+                <!--style="@style/Widget.AppCompat.Button.Borderless"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_alignTop="@id/buttonSix"-->
+                <!--android:layout_toRightOf="@id/buttonSix"-->
+                <!--android:text="*"-->
+                <!--android:textSize="20sp" />-->
+
+            <!--<Button-->
+                <!--android:id="@+id/buttonSubtract"-->
+                <!--style="@style/Widget.AppCompat.Button.Borderless"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_alignTop="@id/buttonThree"-->
+                <!--android:layout_toRightOf="@id/buttonThree"-->
+                <!--android:text="-"-->
+                <!--android:textSize="20sp" />-->
+
+            <!--<Button-->
+                <!--android:id="@+id/buttonAdd"-->
+                <!--style="@style/Widget.AppCompat.Button.Borderless"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_alignTop="@id/buttonEqual"-->
+                <!--android:layout_toRightOf="@id/buttonEqual"-->
+                <!--android:text="+"-->
+                <!--android:textSize="20sp" />-->
+
+            <!--<Button-->
+                <!--android:id="@+id/buttonClear"-->
+                <!--style="@style/Widget.AppCompat.Button.Borderless"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_alignRight="@id/buttonAdd"-->
+                <!--android:layout_below="@id/buttonAdd"-->
+                <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
+                <!--android:text="C"-->
+                <!--android:padding="5dp"-->
+                <!--android:textSize="20sp"-->
+                <!--android:gravity="center"/>-->
+
+        <!--</RelativeLayout>-->
+
+
     </LinearLayout>
-
-    <!--<android.support.design.widget.TabLayout-->
-        <!--android:id="@+id/chooser_tab"-->
-        <!--android:background="@color/darkturq"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--app:tabTextColor="@color/white"-->
-       <!--/>-->
-    <!--<android.support.v4.view.ViewPager-->
-        <!--android:background="@color/colorPrimaryDark"-->
-        <!--android:id="@+id/chooser_viewpager"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--/>-->
-
-
-
-
-
-</LinearLayout>
+</FrameLayout>
