--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white"
+    android:background="@drawable/backgroundwhite"
     tools:context="com.example.lenovo.myfinance.Fragments.Reports_fragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        app:layout_constraintTop_toTopOf="@id/trans_recycler"
+
         >
 
         <RelativeLayout
@@ -23,6 +23,7 @@
             android:layout_marginRight="10dp"
             android:background="@drawable/layout_shape"
             android:padding="10dp"
+            android:elevation="20dp"
             >
             <LinearLayout
                 android:layout_width="match_parent"
@@ -43,7 +44,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="INCOME:"
-
+                        android:textSize="10sp"
                         android:textColor="@color/white" />
                     <TextView
                         android:id="@+id/income_amount"
@@ -70,15 +71,16 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="EXPENSE:"
+                        android:textSize="10sp"
                         android:textColor="@color/white" />
                     <TextView
                         android:id="@+id/expense_amount"
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:text="500"
-                        android:gravity="center"
                         android:padding="5dp"
                         android:layout_marginTop="5dp"
+                        android:gravity="center"
                         android:layout_gravity="center_horizontal"
                         android:background="@drawable/amount_back"
                         android:textColor="@color/white"
@@ -97,6 +99,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="BALANCE:"
+                        android:textSize="10sp"
 
                         android:textColor="@color/white" />
                     <TextView
@@ -104,8 +107,8 @@
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:text="500"
-                        android:padding="5dp"
                         android:gravity="center"
+                        android:padding="5dp"
                         android:layout_weight="1"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/amount_back"
@@ -125,7 +128,8 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="75dp"
+            android:layout_marginTop="68dp"
+            android:elevation="20dp"
             android:src="@drawable/analytics" />
     </RelativeLayout>
 
