--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/backgroundwhite"
     tools:context="com.example.lenovo.myfinance.Fragments.Transaction_fragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -13,13 +13,14 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+
         <!--Top most info layout-->
         <RelativeLayout
             android:id="@+id/TopInfo_relative"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            app:layout_constraintTop_toTopOf="@id/trans_recycler"
+
             >
 
             <RelativeLayout
@@ -30,6 +31,7 @@
                 android:layout_marginRight="10dp"
                 android:background="@drawable/layout_shape"
                 android:padding="10dp"
+                android:elevation="20dp"
                 >
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -50,7 +52,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:text="INCOME:"
-
+                            android:textSize="10sp"
                             android:textColor="@color/white" />
                         <TextView
                             android:id="@+id/income_amount"
@@ -77,6 +79,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="EXPENSE:"
+                        android:textSize="10sp"
                         android:textColor="@color/white" />
                         <TextView
                         android:id="@+id/expense_amount"
@@ -102,8 +105,9 @@
                         android:id="@+id/balance_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
+                        android:layout_gravity="center_horizontal"
                         android:text="BALANCE:"
+                        android:textSize="10sp"
 
                         android:textColor="@color/white" />
                         <TextView
@@ -132,8 +136,9 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="75dp"
-                android:src="@drawable/exchange" />
+                android:src="@drawable/exchange"
+                android:layout_marginTop="68dp"
+                android:elevation="20dp"/>
         </RelativeLayout>
         <Button
             android:id="@+id/addtransaction_button"
@@ -146,16 +151,33 @@
             android:textColor="@color/white"
             android:background="@drawable/button_shape"
             android:layout_gravity="center_horizontal"
+            android:elevation="15dp"
+
 
             />
+        <android.support.design.widget.TabLayout
+        android:id="@+id/chooser_tab"
+        android:background="@drawable/tablayout_shape"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabTextColor="@color/white"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        />
+        <android.support.v4.view.ViewPager
+        android:background="@color/colorPrimaryDark"
+        android:id="@+id/chooser_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/trans_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            app:layout_constraintTop_toBottomOf="@id/TopInfo_relative" />
+        <!--<android.support.v7.widget.RecyclerView-->
+            <!--android:id="@+id/trans_recycler"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:padding="10dp"-->
+            <!--app:layout_constraintTop_toBottomOf="@id/TopInfo_relative" />-->
 
            </LinearLayout>
 
