--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
-    android:background="@color/colorPrimaryDark"
-    android:id="@+id/drawerlayout"
-    tools:context="com.example.lenovo.myfinance.MainActivity">
-    <LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/tool_bar"
+        />
+    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-        <include
-            android:id="@+id/toolbar"
-            layout="@layout/tool_bar"
+        android:orientation="vertical"
+        android:background="@color/colorPrimaryDark"
+        android:id="@+id/drawerlayout"
 
-            />
-        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/container"
+        tools:context="com.example.lenovo.myfinance.MainActivity">
 
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context="com.example.lenovo.myfinance.Main2Activity">
+            android:orientation="vertical">
+
+
+            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/container"
+
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context="com.example.lenovo.myfinance.Main2Activity">
 
 
                 <FrameLayout
@@ -32,33 +41,37 @@
                     android:layout_height="match_parent"
                     android:id="@+id/fragment_frame"/>
 
-            <android.support.design.widget.BottomNavigationView
-                android:id="@+id/navigation"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="0dp"
-                android:layout_marginStart="0dp"
-                android:background="@drawable/backgroundwhite"
-                android:elevation="15dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:menu="@menu/navigation" />
+                <android.support.design.widget.BottomNavigationView
+                    android:id="@+id/navigation"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginStart="0dp"
+                    android:background="@drawable/backgroundwhite"
+                    android:elevation="15dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:menu="@menu/navigation" />
 
-        </android.support.constraint.ConstraintLayout>
-    </LinearLayout>
-
-
+            </android.support.constraint.ConstraintLayout>
+        </LinearLayout>
 
 
 
-   <android.support.design.widget.NavigationView
-       android:layout_width="wrap_content"
-       android:layout_height="match_parent"
-       app:menu="@menu/navigation_menu"
-       android:background="@drawable/backgroundwhite"
-       android:layout_gravity="start"/>
+
+
+        <android.support.design.widget.NavigationView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:menu="@menu/navigation_menu"
+            android:background="@drawable/toolbar_background"
+            android:theme="@style/navbarfont"
+            android:layout_gravity="start"/>
 
 
 
-</android.support.v4.widget.DrawerLayout>
+    </android.support.v4.widget.DrawerLayout>
+</LinearLayout>
+
+
