--- a/app/src/main/res/layout/fragment_expense.xml
+++ b/app/src/main/res/layout/fragment_expense.xml
@@ -2,12 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context="com.example.lenovo.myfinance.Fragments.Expense_Fragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/expense_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="expense" />
+        android:layout_height="wrap_content"/>
 
 </FrameLayout>
