--- a/app/src/main/res/layout/income_transaction_detail.xml
+++ b/app/src/main/res/layout/income_transaction_detail.xml
@@ -97,6 +97,7 @@
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
+                android:singleLine="true"
                 />
         </LinearLayout>
     </LinearLayout>
