--- a/app/src/main/res/drawable/tablayout_shape.xml
+++ b/app/src/main/res/drawable/tablayout_shape.xml
@@ -7,8 +7,8 @@
                 android:startColor="#1ea6e4"
 
                 android:endColor="#3BC0D5  " />
-            <corners android:topLeftRadius="15dp"
-                android:topRightRadius="15dp"/>
+            <corners android:bottomRightRadius="15dp"
+                android:bottomLeftRadius="15dp"/>
         </shape>
     </item>
 
