--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -153,33 +153,15 @@
             android:layout_gravity="center_horizontal"
             android:elevation="15dp"
 
-
             />
-        <android.support.design.widget.TabLayout
-        android:id="@+id/chooser_tab"
-        android:background="@drawable/tablayout_shape"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabTextColor="@color/white"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:elevation="10dp"
-        />
-        <android.support.v4.view.ViewPager
-        android:background="@color/colorPrimaryDark"
-        android:id="@+id/chooser_viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:elevation="10dp"
-        />
 
-        <!--<android.support.v7.widget.RecyclerView-->
-            <!--android:id="@+id/trans_recycler"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:padding="10dp"-->
-            <!--app:layout_constraintTop_toBottomOf="@id/TopInfo_relative" />-->
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/income_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            app:layout_constraintTop_toBottomOf="@id/TopInfo_relative" />
 
            </LinearLayout>
 
