--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <!--<item-->
+        <!--android:id="@+id/show_navbar"-->
+        <!--android:title="show"-->
+        <!--android:icon="@drawable/applogo"-->
+        <!--app:showAsAction="ifRoom"/>-->
     <item
-        android:id="@+id/show_navbar"
-        android:title="show"
-        android:icon="@drawable/applogo"
-        app:showAsAction="ifRoom"/>
+        android:id="@+id/cleartransactions"
+        android:title="CLEAR all transactions"/>
 
 </menu>
