one transaction list

--- a/app/src/main/res/layout/bottomsheet_transaction.xml
+++ b/app/src/main/res/layout/bottomsheet_transaction.xml
@@ -42,6 +42,7 @@
                     android:layout_weight="1"
                     android:gravity="center"/>
                 <TextView
+                    android:id="@+id/categoryname_indialog"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="INCOME"
