--- a/app/src/main/res/layout/income_transaction_detail.xml
+++ b/app/src/main/res/layout/income_transaction_detail.xml
@@ -93,6 +93,14 @@
                 android:textColor="@color/darkturq"/>
 
             <TextView
+                android:id="@+id/currency_sign_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rs."
+                android:textSize="15sp"
+                android:padding="2dp"/>
+
+            <TextView
                 android:id="@+id/transfer_total"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
